<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PiggyBank</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Your Personal Piggy Bank</string>
    <string name="Imgdesc">Background Piggy Bank Picture</string>
	<string name="deposit">+ Save Money (Deposit) + </string>
	<string name="withdraw">- Take out Money (Withdraw) - </string>
	<string name="total">Total In Piggy Bank:</string>
	<string name="addCash">How Much Are You Putting In The Piggy Bank?</string>
	<string name="takeCash">How Much Are You Taking Out Of The Piggy Bank?</string>
	<string name="goals"> Goals </string>
	<color name="green">#00FF00</color>
	<color name="blue">#00FFFF</color>
	<color name="red">#FF0000</color>
	<string name="save">SAVE</string>
	<string name="moneyHint">$xxx.xx</string>
	<string name="newTot">New Total in Piggy Bank:</string>
	<string name="enter">ENTER</string>
	<string name="goal1">Goal #1:</string>
	<string name="goal2">Goal #2:</string>
	<string name="goal3">Goal #3: </string>
	<string name="goalList">Goal List</string>
	<string name="amtNeed">Amount Needed:</string>
	<string name="goalEnter">Add a Goal Here</string>
	<string name="addMoney">Add Money</string>
</resources>
