<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green">
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal">

        <EditText
            android:id="@+id/inputMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/money"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/moneyHint"
            android:inputType="numberDecimal"
            android:singleLine="true">

            <requestFocus />
        </EditText>


    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button1"
        android:layout_marginRight="30dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/total"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/money"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/addCash"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/newBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newTotal"
        android:layout_alignRight="@+id/newTotal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputMoney"
        android:layout_alignRight="@+id/inputMoney"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/money"
        android:layout_below="@+id/button2"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/newTot"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/newBalance"
        android:layout_below="@+id/inputMoney"
        android:layout_marginTop="38dp"
        android:text="@string/addMoney" 
        android:onClick="save"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:onClick="toMain"
        android:text="@string/enter" />
        
    </RelativeLayout>

</LinearLayout>
