<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" 
    	android:textColor="#C48793"
    	android:textStyle="bold"
    	android:gravity="center"/>
    
       <Button
        android:id="@+id/depositButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/withdrawButton"
        android:layout_below="@+id/pic"
        android:layout_marginTop="46dp"
        android:drawable="@android:color/black"
        android:gravity="center"
        android:onClick="toDeposit"
        android:text="@string/deposit" />
    
     <Button 
        android:id="@+id/withdrawButton"
        android:layout_below="@id/depositButton"
        android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:gravity="center"
	    android:onClick="toWithdraw"
	    android:text="@string/withdraw" />
    
    <Button
        android:id="@+id/goalsButton"
        android:layout_below="@id/withdrawButton" 
        android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:gravity="center"
	    android:onClick="toGoals"
	    android:text="@string/goals" />

    <ImageView
        android:id="@+id/pic"
        android:layout_below="@id/welcome" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Imgdesc"
        android:gravity="center"
        android:maxHeight="150dp"
        android:maxWidth="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/pigbank" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pic"
        android:layout_alignLeft="@+id/pic"
        android:layout_alignRight="@+id/pic"
        android:layout_marginBottom="33dp"
        android:adjustViewBounds="true"
        android:gravity="center"
        android:textColor="@color/green" />

</RelativeLayout>
