<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/blue">
    
<RelativeLayout 
	        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal">
	    
	     <TextView
	        android:id="@+id/gl2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/gl1"
	        android:layout_below="@+id/gl1"
	        android:layout_marginTop="38dp"
	        android:gravity="center"
	        android:text="@string/goal2"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/gl3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/gl2"
	        android:layout_below="@+id/gl2"
	        android:layout_marginTop="42dp"
	        android:gravity="center"
	        android:text="@string/goal3"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/gList"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="36dp"
	        android:gravity="center"
	        android:text="@string/goalList"
	        android:textSize="20sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/amtNeed1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/gl1"
	        android:layout_below="@+id/gl1"
	        android:layout_marginLeft="18dp"
	        android:gravity="center"
	        android:text="@string/amtNeed"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/amtNeed2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/amtNeed1"
	        android:layout_below="@+id/gl2"
	        android:gravity="center"
	        android:text="@string/amtNeed"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/amtNeed3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/amtNeed2"
	        android:layout_below="@+id/gl3"
	        android:gravity="center"
	        android:text="@string/amtNeed"
	        android:textStyle="bold" />

	    <EditText
	        android:id="@+id/goal1st"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/gl1"
	        android:layout_alignLeft="@+id/goal2nd"
	        android:background="@color/blue"
	        android:ems="30"
	        android:inputType="text"
	        android:hint="@string/goalEnter" >

	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/goal2nd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/gl2"
	        android:layout_alignLeft="@+id/gList"
		 	android:background="@color/blue"
	        android:ems="30"
	        android:inputType="text" 
	        android:hint="@string/goalEnter">

	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/goal3rd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/gl3"
	        android:layout_alignLeft="@+id/gList"
			android:background="@color/blue"
			android:ems="30"
	        android:inputType="text"
	        android:hint="@string/goalEnter" >

	        <requestFocus />
	    </EditText>

	    <EditText
	        android:id="@+id/amtNeed3rd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/amtNeed3"
	        android:layout_alignBottom="@+id/amtNeed3"
	        android:layout_toRightOf="@+id/gList"
	        android:background="@color/blue"
			android:ems="30"
	        android:inputType="numberDecimal" 
	        android:hint="@string/moneyHint"/>

	    <EditText
	        android:id="@+id/amtNeed1st"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/amtNeed1"
	        android:layout_alignLeft="@+id/amtNeed2nd"
	        android:background="@color/blue"
	        android:ems="30"
	        android:inputType="numberDecimal" 
	        android:hint="@string/moneyHint"/>

	    <TextView
	        android:id="@+id/gl1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/gList"
	        android:layout_marginLeft="33dp"
	        android:layout_marginTop="66dp"
	        android:gravity="center"
	        android:text="@string/goal1"
	        android:textStyle="bold" />

	    <EditText
	        android:id="@+id/amtNeed2nd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/amtNeed2"
	        android:layout_alignLeft="@+id/amtNeed3rd"
	        android:background="@color/blue"
	        android:ems="30"
	        android:inputType="numberDecimal"
	        android:hint="@string/moneyHint" />
	        
	    </RelativeLayout>
    

</LinearLayout>
